<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- global -->
    <string name="app_name">Digi Recordbox</string>
    <string name="title_mainactivity">Digi Recordbox</string>
    <string name="title_mediaplayer">Media player</string>
    <string name="title_recordinglist">Recording list</string>
    <string name="title_editrecording">Edit recording</string>
    <string name="title_help">Help</string>
    <string name="title_about">About</string>
    <string name="title_settings">Settings</string>

    <!-- main activity -->
    <string name="tv_recorder_time">00:00</string>
    <string name="tv_recorder_separator">/</string>

    <!-- options menu -->
    <string name="option_menu_logout">Log out</string>
    <string name="option_menu_list">Recording list</string>
    <string name="option_menu_exit">Exit</string>
    <string name="option_menu_recorder">Recorder</string>
    <string name="option_menu_import_files">Import audio files</string>
    <string name="option_menu_about">About</string>
    <string name="option_menu_help">Help</string>
    <string name="option_menu_settings">Settings</string>

    <!-- login activity -->
    <string name="btn_login">OK</string>
    <string name="tv_email">Enter username:</string>
    <string name="tv_password">Enter password:</string>

    <!-- edit recording activity -->
    <string name="tv_name">Name:</string>
    <string name="tv_description">Description:</string>
    <string name="btn_save">Save</string>
    <string name="btn_save_play">Save and play</string>
    <string name="et_untitled">Untitled</string>

    <!-- recording list activity -->
    <string name="ph_name">name</string>
    <string name="ph_date">date</string>
    <string name="ph_duration">duration</string>
    <string name="ph_description">description</string>
    <string name="hint_search">Search&#8230;</string>
    <string name="img_content_local">Located on local storage</string>
    <string name="img_content_cloud">Located on cloud storage</string>
    
    <!-- settings activity -->
    <string name="pref_title_auto_upload">Auto upload</string>
    <string name="pref_summary_auto_upload">Upload recordings automatically after saving</string>
    <string name="pref_title_use_device_name">Use device name</string>
    <string name="pref_summary_use_device_name">Use device name in the filename</string>
    <string name="pref_title_device_name">Device name&#8230;</string>
    <string name="pref_summary_device_name">Device name used in filename</string>
    
    <!-- dialogs -->
    <string name="title_saving">Saving&#8230;</string>
    <string name="title_uploading">Uploading&#8230;</string>
    <string name="title_downloading">Downloading&#8230;</string>
    <string name="title_recovering">Recovering&#8230;</string>
    <string name="title_deleting">Deleting&#8230;</string>
    <string name="title_checking_files">Checking files&#8230;</string>
    <string name="title_importing">Importing&#8230;</string>
    <string name="title_logging_in">Logging in&#8230;</string>
    <string name="message_saving">Saving, please wait</string>
    <string name="message_uploading">Uploading, please wait</string>
    <string name="message_downloading">Downloading, please wait</string>
    <string name="message_recovering">Recovering last recording, please wait</string>
    <string name="message_deleting">Deleting, please wait</string>
    <string name="message_checking_files">Checking files, please wait</string>
    <string name="message_importing">Importing, please wait</string>
    <string name="message_logging_in">Logging in, please wait</string>
        
    <!-- toasts -->
    <string name="message_authentication_failed">Authentication failed</string>
    <string name="message_no_internet">No internet connectivity</string>    
    <string name="message_not_uploaded">Could not upload to cloud. Please check your internet connectivity</string>
    <string name="message_cloud_not_renamed">Could not rename cloud file. Please check your internet connectivity</string>
    <string name="message_already_on_cloud">The file already exists on the cloud</string>
    <string name="message_already_on_local">The file already exists on the local storage</string>
    <string name="message_not_on_local">The file does not exist on the local storage</string>
    <string name="message_not_on_cloud">The file does not exist on the cloud</string>
    <string name="message_name_validation1">Invalid characters in name field. Only letters, digits, spaces and _ &#8211; allowed </string>
    <string name="message_name_validation2">Name cannot be empty</string>
    <string name="message_recording_canceled">Recording has been canceled</string>
    <string name="message_no_internet_checking">Cannot get status for online files. Unable to connect to the internet</string>
    <string name="message_no_space_avaible">The application needs at least 10MB of internal storage to run. Please free up space.</string>
   	<string name="message_cloud_not_imported">Could not import cloud files. Please check your internet connectivity</string>
   	<string name="message_audio_not_inserted">
   	    The audio file has not been added to the recording list. You can import it later by accessing the \'Import audio files\' option
  	</string>
  	<string name="message_download_success">Download was successful</string>
  	<string name="message_download_fail">Download has failed</string>
  	<string name="message_upload_success">Upload was successful</string>
  	<string name="message_upload_fail">Upload has failed</string>
  	<string name="message_deletion_success">Deletion was successful</string>
  	<string name="message_deletion_fail">Download has failed</string>
  	<string name="message_imported_all">All files are already in the database</string>
  	<string name="message_imported_one">Added one audio file to the database</string>
  	<string name="message_imported_x">Added %1$d audio files to the database</string>
    
    <!-- help activity -->
    <string name="help_title1">
		What is Digi Recordbox?
	</string>
	<string name="help_content1">
	    \n\tDigi Recordbox allows the recording of audio notes which are then uploaded 
	    and stored on the Digi Storage cloud service. \n\n
	    \tAfter uploading the first recording, a new folder named \"Digi Recordbox\" 
	    will be created in the existing root folder \"Digi Cloud\"
	    associated with your Digi Storage account.\n\n
		\tThe audio notes can then be played back, either directly from the device\'s 
		local storage, or by streaming them from the cloud. \n\n
	</string>
	<string name="help_title2">
	    Instructions
	</string>
	<string name="help_content2">
	    \n\tStart recording by pressing the record button in the main screen.\n\n
		You can pause and resume recording by pressing the same button.\n\n
		\tWhen you are done recording, pressing the stop button will present you a new screen 
		 where you can enter a name and a description for the audio note.\n\n
		\tAfter entering the name and the description, you can either just save and go back
		 to the main screen, or save and then immediately open the audio note in the
		 media player.\n\n
		\tYou can access the list of audio notes saved locally and/or on the cloud by pressing the 
		 device\'s menu button (if the device doesn\'t have a physical menu button, a menu icon
		 will show up in the top right corner of the screen) and selecting \"Recording list\".\n\n
		Besides the name, description and duration of the recording, you\'ll also notice
		 two small circles. The first one will color green when the file is present on the local
		 storage and the second one will color blue when the file is stored in the cloud.\n\n
		\tFrom here you can click on a note and open it in the media player. \n\n
		\tLong pressing on the audio note will open up a context menu from where you can perform
		 different actions like deleting and uploading recordings.\n\n
	</string>
	
	<!-- about activity -->
	<string name="about_content1">
	    Version 1.0\n
	    digistorage@rcs-rds.ro\n
	</string>
	<string name="about_content2">
	    Project developed by:\n
	    Razvan.Mandache@gmail.com\n
	    Tiberiu.Omusoru@gmail.com\n
	</string>
	<string name="about_content3">
	    Design APP: WEB_MKT
	</string>	
	<string name="btn_tos">Terms of service</string>

</resources>
