<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_list_item"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_name"
        android:layout_alignStart="@+id/tv_name"
        android:layout_below="@+id/tv_name"
        android:text="@string/ph_date" />

    <TextView
        android:id="@+id/tv_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_name"
        android:layout_alignBottom="@+id/tv_name"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/ph_duration" />

    <ImageView        
        android:id="@+id/iv_status_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv_date"
        android:layout_alignLeft="@+id/tv_duration"
        android:layout_alignStart="@+id/tv_duration"
        android:background="@drawable/status_none"
        android:contentDescription="@string/img_content_local" />

    <ImageView        
        android:id="@+id/iv_status_cloud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/tv_duration"
        android:layout_alignEnd="@+id/tv_duration"
        android:layout_alignTop="@+id/iv_status_local"
        android:background="@drawable/status_none"
        android:contentDescription="@string/img_content_cloud" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/tv_duration"
        android:text="@string/ph_name" />

</RelativeLayout>
